<resources>
    <string name="app_name">StoryApps</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">Username</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="signup">Sign Up</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="item_photo">item photo</string>
    <string name="title">Title</string>
    <string name="desc">description</string>
    <string name="imgpreview">ImgPreview</string>
    <string name="add_data">add data</string>
    <string name="detail_photo">detail photo</string>
    <string name="testingText">Text testing</string>
    <string name="textview">TextView</string>
    <string name="detail_story">Detail Story</string>
    <string name="back_button">BackButton</string>
    <string name="retry">Retry</string>
    <string name="date_created">Monday, 21 September 2023 (00:00)</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="addDesc">"add description "</string>
    <string name="submit">Submit</string>
    <string name="maps_icon">Maps Icon</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="use_current_location">Use current location</string>
</resources>